# agent-mem

./: .gitignore  AGENT-MEM-RULES.md  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.antigravity/: rules.md
.claude/: instructions.md
.cursor/rules/: agent-mem.mdc
.opencode/: instructions.md
agent-mem-landing/: package-lock.json  package.json  test_logo.js
agent-mem-landing/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
agent-mem-landing/components/: Features.js  Hero.tsx  Navbar.js  TerminalDemo.js
agent-mem-landing/components/ui/: paper-design-shader-background.tsx  spotlight-card.tsx  starship-shader.tsx
docs/: v0.4-spec.md
docs/releases/: v0.4.1.md  v0.4.2.md  v0.6.1.md  v0.6.2.md  v0.6.3.md
src/agent_mem/: cli.py  config.py  graph.py  mcp_server.py  memory.py  migrator.py  watcher.py
