[project]
name = "easy-agent-mem"
version = "0.3.0"
description = "Persistent memory layer for AI coding agents (Cursor / VS Code). Auto-summarizes sessions to Markdown / Obsidian."
authors = [{ name = "Atharva", email = "atharva.v.deo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "memory", "obsidian", "claude", "cursor", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
mcp = ["mcp>=0.3"]

[project.scripts]
agent-mem = "agent_mem.cli:app"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]