[project]
name = "easy-agent-mem"
version = "0.5.2"
description = "CLI-first persistent memory for AI coding sessions with direct Obsidian note writing and local fallback storage."
authors = [{ name = "Atharva", email = "atharva.v.deo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agent", "memory", "obsidian", "claude", "cursor", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.12",
    "watchdog>=4.0",
    "groq>=0.8",
    "pyperclip>=1.9",
]

[project.urls]
Homepage = "https://github.com/atharvavdeo/agent-mem"
Repository = "https://github.com/atharvavdeo/agent-mem"
Issues = "https://github.com/atharvavdeo/agent-mem/issues"

[project.optional-dependencies]
mcp = ["mcp>=0.3"]

[project.scripts]
agent-mem = "agent_mem.cli:app"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
